--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
           "use strict";
           var margin = 75,
-              width = 1400 - margin,
+              width = 1300 - margin,
               height = 600 - margin;
 
 		  
@@ -38,23 +38,23 @@
 
           var myChart = new dimple.chart(svg, data);
           //var x = myChart.addTimeAxis("x", "year"); 
-          var x = myChart.addMeasureAxis("x", "gmssugar");
-          var y = myChart.addMeasureAxis("y", "bmi");
+          var xAxis = myChart.addMeasureAxis("x", "gmssugar");
+          var yAxis = myChart.addMeasureAxis("y", "bmi");
+          var zAxis = myChart.addMeasureAxis("z", "gdp.sqrt");
 
+          yAxis.overrideMin = 18; //BMI axis does not need to go down to 0
 
-          bmi_min = d3.min(data, function(d) { return d.bmi; });
-          y.overrideMin = bmi_min-2;
-
-          //x.dateParseFormat = "%Y";
-          //x.tickFormat = "%Y";
-          //x.timeInterval = 1;
-          myChart.addSeries(["Country", "Region"], dimple.plot.bubble);
-          //myChart.addSeries(null, dimple.plot.line);
+          xAxis.title = "Sugar Consumption (Grams Per Person Per Day)";
+          yAxis.title = "Average Body Mass Index (Men)"
+          zAxis.title = "GDP per capita"
+          myChart.addSeries(["gdp","year", "Country", "Region"], dimple.plot.bubble);
+          myChart.addLegend(750,20,500,20, "left")
           myChart.draw();
         };
       </script>
   </head>
 <body>
+  <h2>Sugar Consumption and BMI, 2001</h2>
   <script type="text/javascript">
   /*
     Use D3 (not dimple.js) to load the TSV file
